@@ -21,6 +21,7 @@ AUX zh-CN.patch 72594 BLAKE2B b15b416fb69b6789c3a6ab1917e6861b0d1ab4c3609dcb6b89
 DIST pantheon-files-4.4.2.tar.gz 4130445 BLAKE2B 2d14c9317d82e8b0698cb8ed9714675bc9495317cc8b8dcbb9b3859651dad7d0c521e4fd250e5bbb469c602f3eaca9d519f980ce6ffcc7c8aea9dfde57c6163b SHA512 6a8d870295bea86475e9fc0a66fc158809472c6ac484e73aa744e9924e3f584dd6cd39da7710406785faa241821a10a7a5545c277f06e664ce6a9998c0735deb
 EBUILD pantheon-files-4.4.2-r2.ebuild 1352 BLAKE2B f68bca770c5b6d59fc0dd5ee763aa8cad00e506115b8440d2973125dccde496ec3a9dbfdedd0e7703e18458ab619dfa00025c334d543eeae22462b821787f06b SHA512 a15bc010d43ced9b5d54f34df95e3c32e5675235f656e9b2b2ad8f8bc74105b0714e5dccee793ac19146d32687fbe96fc9b4626950b8373083bf49e975e82d8b
 EBUILD pantheon-files-4.4.2-r3.ebuild 2498 BLAKE2B 6e099d94ad6311737c88c0be58cd40134edb4df9ce7f8e1e4850ae167e79365912d1721938ad25b6241b1e48f44bfc6b9338bac39bf96c6ccb52fa2abe51ca4e SHA512 7103cfa2dfd05e7181b9a1ec90cd8212667bbf0ae0d397963a91bd796b27662b03cb941ad33aa882d6203684bad64f51220627cee0b8ad089f4e5509f33d82e4
+EBUILD pantheon-files-4.4.2-r4.ebuild 2671 BLAKE2B 29ef96759ba19aef66a3c2aaf1a61b1ea082954ba0e6e481387b984c265164e53abe3de715fe396b7afef9bef1f7e7bd27e2e2a6c44a189b32271290f61115f0 SHA512 d209ab311f3871af6438f39aedf45ee79a1e981cc80a1b7f3a78fa7f4753fbff557b1582a4f105a69fb1c6dd92c46cbf5922b712c53e31689b1217fa299bd402
 EBUILD pantheon-files-4.4.2.ebuild 1313 BLAKE2B e07d487ad889474ccf491b43169b31463e26a823c8599bd2a2a7e26e94c2805214c4ed657a26fcd2763ac58cd3d4b34996a9eb9ce86554d97fd4b684cde428ba SHA512 e678807833109133cad7291062724de786a4eda5691680b05cf721d07c970af3de5a8dea13f1ed94b2abd2aec1464d88e55a81e1e1a06eade8108c256499ff7a
-MISC ChangeLog 1104 BLAKE2B 603ff8dcd0a3dbe0d38c3adb8f00d8b3b87b2ebe1981ffcc97dfb1f4c021d87e4afc2964b7db8ad1cf1e63b82ddf103b53626d51a3729ec6a52d8541b60fb92d SHA512 9244e7f6ccbd241475025dcd6b306aee9c6c4040b42f13db3def3c6218074036d5aebc320bc25b62aac243d215ea15b240e8e218b64687ecff0f3927c2b11655
+MISC ChangeLog 1170 BLAKE2B dd0b7a867bdb1d894780ebb2ff99da3a547aa2ba796708e7c352a317ca7b1c83ae6ace7b8d6cb237bbe1d57fd645b1ccaf3614ad3bb7bb030dd1201a33085d11 SHA512 0085bc6bc64001e1ed99e4b3af3576e8662b6179259cd5c324ff2d22af28c63dffc29dbcbccd436afb2839757d0061e1d838a7d91cd7534120a35415bd166816
 MISC metadata.xml 763 BLAKE2B 9ee774c75e72a3a7770fe2ee7c47614c5864a901fee5a0652ff6cb9ba46b873c6ee6fdc0756ba106018d4201c96b9b60eabf2f5851131b02695290738b5a247c SHA512 24f1887fde18309d405317d99646be3bb9588bd461e5fbd375d5a15d5b71f199be5ccfc2476bd801798483d6d55df411eab20c786dcf9cd746da12e7bf8ec6e6
